--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,14 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
 @misc{adeniji2025feelforcecontactdrivenlearning,
       title={Feel the Force: Contact-Driven Learning from Humans}, 
       author={Ademi Adeniji and Zhuoran Chen and Vincent Liu and Venkatesh Pattabiraman and Raunaq Bhirangi and Siddhant Haldar and Pieter Abbeel and Lerrel Pinto},
@@ -23,7 +15,7 @@
 
 @misc{guo2025imagegeminthewildgenerativeimage,
       title={ImageGem: In-the-wild Generative Image Interaction Dataset for Generative Model Personalization}, 
-      author={Yuanhe Guo and Linxi Xie and Zhuoran Chen and Kangrui Yu and Ryan Po and Guandao Yang and Gordon Wetztein and Hongyi Wen},
+      author={Yuanhe Guo* and Linxi Xie* and Zhuoran Chen and Kangrui Yu and Ryan Po and Guandao Yang and Gordon Wetztein and Hongyi Wen},
       year={2025},
       eprint={2510.18433},
       archivePrefix={arXiv},
